@startuml

title __PIZZA's Class Diagram__\n

  namespace Pizza {
    class Pizza.BeefPizza {
        + BeefPizza()
        + getCost()
    }
  }
  

  namespace Pizza {
    abstract class Pizza.Pizza {
        ~ description : String
        {abstract} + getCost()
        + getDescription()
    }
  }
  

  namespace Pizza {
    class Pizza.VeggiPizza {
        + VeggiPizza()
        + getCost()
    }
  }
  

  Pizza.BeefPizza -up-|> Pizza.Pizza
  Pizza.VeggiPizza -up-|> Pizza.Pizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
